Fixed dark mode for list view

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body {
 }
 
 #home {
-	height: calc(100vh - 50px);
+	height: calc(100vh);
 }
 
 .LoaderText {
